Avoid unneccessary scrollbars

--- a/app/assets/stylesheets/_misc_legacy.sass
+++ b/app/assets/stylesheets/_misc_legacy.sass
@@ -618,6 +618,10 @@ a.impaired--empty-link,
       margin-bottom: 1px
       flex-basis: 50%
 
+    &:not(.-with-button)
+      .form--field
+        overflow: hidden
+
   // Override default margin to allow correct vertical alignment
   #add-member--submit-button
     margin-bottom: 0
